--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.4",
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-icons": "^4.12.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "eslint": "^8",
