--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ GOOGLE_SECRET="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"
 MONGODB_URI="mongodb+srv://ahmedrashad13281:EDQBg2NOLALoKnOu@cluster0.amwzri3.mongodb.net/?retryWrites=true&w=majority"
 GITHUB_ID=fd27bff2404e0efbddad
 GITHUB_SECRET=b7df3c25340c83687904c3a0332e26507461c1ea
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="nothing"
+NEXT_PUBLIC_URL="http://localhost:3000"
+NEXT_PUBLIC_SECRET="nothing"
