--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGODB_URI="mongodb+srv://ahmedrashad13281:EDQBg2NOLALoKnOu@cluster0.amwzri3.mo
 GITHUB_ID=fd27bff2404e0efbddad
 GITHUB_SECRET=b7df3c25340c83687904c3a0332e26507461c1ea
 NEXTAUTH_URL="https://ecommerce-using-next-js.vercel.app"
-NEXT_PUBLIC_SECRET="nothing"
+NEXTAUTH_SECRET="nothing"
